<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/_0"
        android:background="#6D6C71"
        android:ems="10"
        android:gravity="right|center"
        android:layout_marginBottom="1pt"
        android:inputType="textPersonName"
        android:textSize="40pt"
        tools:ignore="Autofill,LabelFor,RtlHardcoded" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/buAC"
                android:text="@string/ac"
                android:onClick="acEvent"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#8C8CC5"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buPlusMinus"
                android:text="@string/buPlusMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/buDivide"
                android:text="@string/buDivide"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="UsingOnClickInXml"
                android:layout_marginEnd="1pt" />

            <Button
                android:id="@+id/buMultiply"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/buMultiply"
                android:textColor="#FFF"
                app:backgroundTint="#261C37"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/bu7"
                android:text="@string/bu7"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/bu8"
                android:text="@string/bu8"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/bu9"
                android:text="@string/bu9"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buPercent"
                android:text="@string/buPercent"
                android:onClick="percentEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/black"
                android:textColor="#FFF"
                app:backgroundTint="#261C37"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/bu4"
                android:text="@string/bu4"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="UsingOnClickInXml"
                android:layout_marginEnd="1pt" />

            <Button
                android:id="@+id/bu5"
                android:text="@string/bu5"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="UsingOnClickInXml"
                android:layout_marginEnd="1pt" />

            <Button
                android:id="@+id/bu6"
                android:text="@string/bu6"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buPlus"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/buplus"
                android:textColor="#FFF"
                app:backgroundTint="#261C37"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/bu1"
                android:text="@string/bu1"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/bu2"
                android:text="@string/bu2"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="UsingOnClickInXml"
                android:layout_marginEnd="1pt" />

            <Button
                android:id="@+id/bu3"
                android:text="@string/bu3"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buMinus"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/buminus"
                android:textColor="#FFF"
                app:backgroundTint="#261C37"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/bu0"
                android:text="@string/bu0"
                android:onClick="numberEvent"
                android:layout_width="46pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="UsingOnClickInXml"
                android:layout_marginEnd="1pt" />

            <Button
                android:id="@+id/buDot"
                android:text="@string/buDot"
                android:onClick="numberEvent"
                android:layout_width="46pt"
                android:layout_height="30pt"
                android:layout_marginEnd="1pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="#0D1439"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buEqual"
                android:onClick="equalEvent"
                android:layout_width="20pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/buEqual"
                android:textColor="#FFF"
                app:backgroundTint="#261C37"
                android:layout_marginEnd="1pt"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

    </LinearLayout>

</LinearLayout>